--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-#Movies
-.avi
-.mp4
-.asf
-.mpeg
+#Movie files in all directories
+**/*.avi
+**/*.mp4
+**/*.asf
+**/*.mpeg
 
 # Windows image file caches
 Thumbs.db
